# ckanext-cognito-oidc

./: MANIFEST.in  README.md  setup.cfg  test.ini
ckanext/cognito_oidc/: config.py  config_declaration.yaml  interfaces.py  plugin.py  signals.py  utils.py  views.py
ckanext/cognito_oidc/tests/: conftest.py  test_plugin.py  test_utils.py
