[metadata]
name = ckanext-cognito-oidc
version = 0.0.1
description = CKAN OIDC authenticator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crayoncrayon2003/ckanext-cognito-oidc
author = 
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN, Cognito, oidc, authentication

[options]
packages = find:
namespace_packages = ckanext
install_requires = typing_extensions
include_package_data = True

[options.entry_points]
ckan.plugins =
             cognito_oidc = ckanext.cognito_oidc.plugin:CognitoOidcPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
test =
     pytest-factoryboy

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/cognito_oidc/i18n/ckanext-cognito_oidc.pot
width = 80

[init_catalog]
domain = ckanext-cognito_oidc
input_file = ckanext/cognito_oidc/i18n/ckanext-cognito_oidc.pot
output_dir = ckanext/cognito_oidc/i18n

[update_catalog]
domain = ckanext-cognito_oidc
input_file = ckanext/cognito_oidc/i18n/ckanext-cognito_oidc.pot
output_dir = ckanext/cognito_oidc/i18n
previous = true

[compile_catalog]
domain = ckanext-cognito_oidc
directory = ckanext/cognito_oidc/i18n
statistics = true
